Bug 465811 - Kate sometimes fails to load katepart when closing a tab in another split in a session
Summary: Kate sometimes fails to load katepart when closing a tab in another split in ...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 22.12.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-16 03:25 UTC by Grósz Dániel
Modified: 2023-02-26 10:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments
Screenshot (83.94 KB, image/png)
2023-02-16 03:25 UTC, Grósz Dániel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2023-02-16 03:25:06 UTC
Created attachment 156287 [details]
Screenshot

SUMMARY
Under some circumstances, when Kate would have to load a tab in another split view that hasn't been active since Kate was started (which can happen if the tab comes from a saved session), it fails to load the editor component. See screenshot.

STEPS TO REPRODUCE
1. Start Kate with a new session.
2. Open File A.
3. Click Split Vertical. Now file A is open on both sides, and the right side is focused.
4. Open File B.
5. Click in the editor on the left side to focus it.
6. Open File B there too.
7. Click the tab with File A on the right side split to activate and focus it.
8. Save the session.
9. Close Kate.
10. Open Kate again, and open the session just created. A and B are open on both sides, B is active on the left side, A on the right side, and the right side has keyboard focus.
11. Click in the editor on the left side to focus it.
12. Close Tab A on the right side with the X button.

OBSERVED RESULT
On the right side,, Kate switches to Tab B, but it fails to load the katepart, resulting in an empty area where the editor should be. (See screenshot.)

EXPECTED RESULT
The editor on the right side view is loaded.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230214
KDE Plasma Version: 5.27.0
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Graphics Platform: X11

ADDITIONAL INFORMATION
Might be related to Bug 465807 or Bug 465808. In many circumstances (such as if you skip Step 6, so B is not opened on the left side), Bug 465808 occurs too, i.e. Kate switches to a different file on the focused side. (Katepart is loaded correctly there.)
Comment 1 Bug Janitor Service 2023-02-17 10:27:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1110
Comment 2 Waqar Ahmed 2023-02-17 20:53:29 UTC
Git commit 3950c67a04fe45023d11fbf05eb8deca997ab563 by Waqar Ahmed.
Committed on 17/02/2023 at 10:29.
Pushed by cullmann into branch 'master'.

Activate the view of viewspace which made the request
FIXED-IN: 23.04

M  +42   -0    apps/lib/autotests/kate_view_mgmt_tests.cpp
M  +1    -0    apps/lib/autotests/kate_view_mgmt_tests.h
M  +17   -15   apps/lib/kateviewmanager.cpp
M  +3    -1    apps/lib/kateviewmanager.h
M  +7    -7    apps/lib/kateviewspace.cpp

https://invent.kde.org/utilities/kate/commit/3950c67a04fe45023d11fbf05eb8deca997ab563
Comment 3 Waqar Ahmed 2023-02-26 10:49:47 UTC
Git commit 6a28dfe19247a7a02a5e08e9bfa245ec4c10280e by Waqar Ahmed.
Committed on 26/02/2023 at 10:46.
Pushed by waqar into branch 'release/22.12'.

Activate the view of viewspace which made the request
FIXED-IN: 23.04

M  +42   -0    apps/lib/autotests/kate_view_mgmt_tests.cpp
M  +1    -0    apps/lib/autotests/kate_view_mgmt_tests.h
M  +17   -15   apps/lib/kateviewmanager.cpp
M  +3    -1    apps/lib/kateviewmanager.h
M  +7    -7    apps/lib/kateviewspace.cpp

https://invent.kde.org/utilities/kate/commit/6a28dfe19247a7a02a5e08e9bfa245ec4c10280e