Activate the view of viewspace which made the request

BUG: 465811
FIXED-IN: 23.04